fullSandbox11072023/force-app/main/default/objects/Survey_SFDC__c/Survey_SFDC__c.object-meta.xml
<CustomObject>
    <label>Survey - SFDC</label>
    <nameField>
        <displayFormat>{0000000}</displayFormat>
        <label>Survey - SFDC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Survey - SFDC</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>