fullSandbox11072023/force-app/main/default/objects/Survey_SFDC__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Survey - SFDC</relationshipLabel>
    <relationshipName>Survey_SFDC</relationshipName>
    <type>Lookup</type>
</CustomField>