fullSandbox11072023/force-app/main/default/objects/Survey_SFDC__c/fields/How_often_do_you_login__c.field-meta.xml
<CustomField>
    <fullName>How_often_do_you_login__c</fullName>
    <label>How often do you login</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I&apos;m in it all day!</fullName>
            </value>
            <value>
                <fullName>Several Times a Day</fullName>
            </value>
            <value>
                <fullName>Several Times a Week</fullName>
            </value>
            <value>
                <fullName>Several Times a Month</fullName>
            </value>
            <value>
                <fullName>Wait, I have to Login?</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>