fullSandbox11072023/force-app/main/default/objects/Survey_SFDC__c/fields/Preferred_Training_Method__c.field-meta.xml
<CustomField>
    <fullName>Preferred_Training_Method__c</fullName>
    <description>What is your preferred method for receiving training?</description>
    <label>Preferred Training Method</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Training Webinars</fullName>
            </value>
            <value>
                <fullName>Classroom Training</fullName>
            </value>
            <value>
                <fullName>Recorded Video Training</fullName>
            </value>
            <value>
                <fullName>How-To Documentation</fullName>
            </value>
            <value>
                <fullName>Help Site</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>