fullSandbox11072023/force-app/main/default/objects/Survey_SFDC__c/fields/Responsive_to_your_needs__c.field-meta.xml
<CustomField>
    <fullName>Responsive_to_your_needs__c</fullName>
    <label>Responsive to your needs?</label>
    <length>255</length>
    <type>Text</type>
</CustomField>