fullSandbox11072023/force-app/main/default/objects/Survey_SFDC__c/fields/User__c.field-meta.xml
<CustomField>
    <fullName>User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Survey_SFDC</relationshipName>
    <type>Lookup</type>
</CustomField>