fullSandbox11072023/force-app/main/default/objects/Survey_SFDC__c/fields/What_do_you_like_least__c.field-meta.xml
<CustomField>
    <fullName>What_do_you_like_least__c</fullName>
    <label>What do you like least?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>